# python_hw

beautifulsoup_crawler/: README.md  kaubamaja_bs_result.json  kaubamaja_soup_crawl.py
canteens/: README.md  canteenDbSQL.py  canteenDbSqlAlchemy.py  diners.db  diners_orm.db  documentation.txt
flightsTallinn/: README.md  main.py
input_validator/: invalid_input.txt  main.py  valid_input.txt
photoFlag/: main.py
scrapycrawl/: README.md  kaubamaja_scrape.json
scrapycrawl/scrapycrawl/: settings.py
scrapycrawl/scrapycrawl/spiders/: kaubamaja_crawl.py
square/: LICENCE  README.md  pyproject.toml  square_shann_installer.py
square/square_shann/: __init__.py  square_formula.py
square/square_shann/tests/: test_square_formula.py
table_calculation/: calculation_table.txt  main.py
weather_forecaster/: README.md  main.py
